# ChangeLog for media-libs/tunepimp
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/tunepimp/ChangeLog,v 1.76 2010/02/11 17:09:07 ssuominen Exp $

*tunepimp-0.5.3-r3 (11 Feb 2010)

  11 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  +tunepimp-0.5.3-r3.ebuild:
  Remove broken and unrequired libtunepimp.la wrt #304557.

  22 Jan 2010; Jonathan Callen <abcd@gentoo.org> tunepimp-0.5.3-r2.ebuild:
  Keyword ~amd64-linux/~x86-linux, don't hardcode ".so"

  19 Jan 2010; Jeroen Roovers <jer@gentoo.org> tunepimp-0.5.3-r2.ebuild:
  Stable for HPPA too.

  10 Oct 2009; Raúl Porcel <armin76@gentoo.org> tunepimp-0.5.3-r2.ebuild:
  sparc stable wrt #280799

  27 Sep 2009; Brent Baude <ranger@gentoo.org> tunepimp-0.5.3-r2.ebuild:
  Marking tunepimp-0.5.3-r2 ppc64 for bug 280799

  29 Aug 2009; nixnut <nixnut@gentoo.org> tunepimp-0.5.3-r2.ebuild:
  ppc stable #280799

  15 Aug 2009; Markus Meier <maekke@gentoo.org> tunepimp-0.5.3-r2.ebuild:
  amd64/x86 stable, bug #280799

  10 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
  tunepimp-0.5.3-r2.ebuild, +files/tunepimp-0.5.3-new_libmp4v2.patch:
  Patch from ArchLinux to build with libmp4v2 >= 1.6 plus a include location
  change to build with >= 1.9.

*tunepimp-0.5.3-r2 (29 May 2009)

  29 May 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +tunepimp-0.5.3-r2.ebuild, +files/tunepimp-0.5.3-gcc44.patch:
  Revision bump. Fixing gcc issues. Per bug #271615. Thx to hirakendu for
  patch.

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> tunepimp-0.5.3-r1:
  Marked ~hppa (bug #260777).

  25 Feb 2009; Joseph Jezak <josejx@gentoo.org> tunepimp-0.5.3-r1.ebuild:
  Marked ppc stable for bug #245547.

  16 Feb 2009; Brent Baude <ranger@gentoo.org> tunepimp-0.5.3-r1.ebuild:
  stable ppc64, bug 245547

  09 Feb 2009; Tiago Cunha <tcunha@gentoo.org> tunepimp-0.5.3-r1.ebuild:
  stable sparc, bug 245547

  08 Feb 2009; Markus Meier <maekke@gentoo.org> tunepimp-0.5.3-r1.ebuild: