@@ -4,6 +4,6 @@ AUX tunepimp-0.5.3-gcc44.patch 473 RMD160 3f4b6d0cc213ffa7ff42b3b701ae5bc3d113a5
 AUX tunepimp-0.5.3-libtool.patch 1169 RMD160 73479770ef2b9fc320de2ed3be2c6dbbf96a7b4c SHA1 ea28badda640e0de0c7d7d7229f3dbf3fd9f46f7 SHA256 7d9b29199b7186b7b57980fd5bcb08e26e0f13e4f989dc6b8ee04e968f919b40
 AUX tunepimp-0.5.3-new_libmp4v2.patch 852 RMD160 bd36a7ccc719762df6a847d592545f59cfde7c69 SHA1 1ee35ef6c0de85eb47558f3208f089dc3e926818 SHA256 c27fd67e2c570047be63febc7c0c3d9f95ed2d23f211e4d15514241218aa929c
 DIST libtunepimp-0.5.3.tar.gz 1097005 RMD160 6bc312591b98a5b74824fc3103137cbf60d4b012 SHA1 1b904cd97ce009588fe57336f40e79b6edf9947e SHA256 341744a0be386387632fc4bb906b97d2b3346137beb2c776a41dedaeeb0f2468
-EBUILD tunepimp-0.5.3-r3.ebuild 1771 RMD160 362127e7820a160bf0f66ada68ee8e5e76eb6f69 SHA1 c1eff6f500b1ac689d2169c6c3b7d3cc458d6cb9 SHA256 95885e0684631524a83911ad9c3a1da0bb201fe4e83d4acedd3b0b02a3fc00ad
-MISC ChangeLog 10055 RMD160 cfa71a6fd237f43cb8d61a67456f954e982c4aa6 SHA1 b3c649d8d9f349eeb9e7983b334062685d8ba9fe SHA256 c472da399220e44981408817b443026ea7015a950a8e85faabcf73dd2fc9e926
+EBUILD tunepimp-0.5.3-r3.ebuild 2186 RMD160 750faba06635ac9399eea1b133495a1bf7b656f8 SHA1 4987610ca892de5a87470fea2f0cf536f1d0f246 SHA256 9cd77f89181c740ed02f68c7917667c3f27adbb42d091cc222bf856dc452630e
+MISC ChangeLog 10197 RMD160 127fccab2df909aeea38d8ef00b67d5f454ac62a SHA1 808f80551f89bc8da61723048d1f4b7906bb919b SHA256 64a29cffd5f15b7d5721f1f62333d683767f038a462ac9a1e3447813888b0673
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
