@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/tunepimp
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/tunepimp/ChangeLog,v 1.76 2010/02/11 17:09:07 ssuominen Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/tunepimp/ChangeLog,v 1.77 2011/02/22 23:59:07 arfrever Exp $
+
+  22 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  tunepimp-0.5.3-r3.ebuild:
+  Set SUPPORT_PYTHON_ABIS (bug #313547).
 
 *tunepimp-0.5.3-r3 (11 Feb 2010)
 
